2262.	[bug]		Error status from all but the last view could be
			lost. [RT #17292]

	--- 9.5.0b1 released ---

2261.   [bug]           Fix memory leak with "any" and "none" ACLs [RT #17272]

2260.	[bug]		Reported wrong clients-per-query when increasing the
                        value. [RT #17236]

2259.	[placeholder]

	--- 9.5.0a7 released ---

2258.	[bug]		Fallback from IXFR/TSIG to SOA/AXFR/TSIG broken.
			[RT #17241]

2257.	[bug]		win32: Use the full path to vcredist_x86.exe when
			calling it. [RT #17222]

2256.	[bug]		win32: Correctly register the installation location of
			bindevt.dll. [RT #17159]

2255.	[bug]		L.ROOT-SERVERS.NET is now 199.7.83.42.

2254.	[bug]		timer.c:dispatch() failed to lock timer->lock
			when reading timer->idle allowing it to see
			intermediate values as timer->idle was reset by
			isc_timer_touch(). [RT #17243]

2253.	[func]	 	"max-cache-size" defaults to 32M.
			"max-acache-size" defaults to 16M.

2252.   [bug]           Fixed errors in sortlist code [RT #17216]

2251.	[placeholder]

2250.	[func]		New flag 'memstatistics' to state whether the
			memory statistics file should be written or not.
			Additionally named's -m option will cause the
			statistics file to be written. [RT #17113]
			
2249.   [bug]           Only set Authentic Data bit if client requested
                        DNSSEC, per RFC 3655 [RT #17175]

2248.   [cleanup]       Fix several errors reported by Coverity. [RT #17160]

2247.	[doc]		Sort doc/misc/options. [RT #17067]

2246.	[bug]		Make the startup of test servers (ans.pl) more
			robust. [RT #17147]

2245.	[bug]		Validating lack of DS records at trust anchors wasn't
			working. [RT #17151]

2244.	[func]		Allow the check of nameserver names against the
			SOA MNAME field to be disabled by specifying
			'notify-to-soa yes;'.  [RT #17073]

2243.	[func]		Configuration files without a newline at the end now
			parse without error. [RT #17120]

2242.	[bug]		nsupdate: GSS-TSIG support using the Heimdal Kerberos