@@ -1,3 +1,6 @@
+2263.	[bug]		"named-checkconf -z" failed to set default value
+			for "check-integrity".  [RT #17306]
+
 2262.	[bug]		Error status from all but the last view could be
 			lost. [RT #17292]
 
